Remove duplicate styling, fix css spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -3,11 +3,13 @@
     src: url('../assets/fonts/Nunito-Regular.ttf') format('truetype');
     font-weight: normal;
 }
+
 @font-face {
     font-family: 'Nunito';
     src: url('../assets/fonts/Nunito-Bold.ttf') format('truetype');
     font-weight: bold;
 }
+
 body {
     background-color: #031927;
     color: rgb(220, 220, 220);
@@ -17,6 +19,7 @@ body {
     margin: 0;
     padding: 0;
 }
+
 #overlay {
     height: 100vh;
     width: 30vw;
@@ -29,30 +32,36 @@ body {
     justify-content: center;
     align-items: center;
 }
+
 #home-container {
     height: 100vh;
     width: 100vw;
 }
+
 #home {
     padding-left: 15%;
     padding-top: 15%;
     width: 50%;
 }
+
 #about {
     padding-left: 15%;
     width: 50%;
 }
+
 #projects {
     padding-left: 15%;
     padding-top: 5%;
     width: 50%;
 }
+
 #contact {
     padding-left: 15%;
     padding-top: 5%;
     width: 50%;
     clear: both;
 }
+
 #footer {
     text-align: center;
     font-size: 0.6em;
@@ -62,30 +71,9 @@ body {
 
 /* mobile/tablet */
 @media (max-width: 767px) and (orientation: portrait) {
-    body {
-        background-color: #031927;
-        color: rgb(220, 220, 220);
-        font-family: 'Nunito', sans-serif;
-        font-weight: 400;
-        font-size: 1em;
-        margin: 0;
-        padding: 0;
-    }
     #overlay {
-        height: 100vh;
         width: 10vw;
-        position: fixed;
-        z-index: 1;
-        top: 0;
         left: 90vw;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    #home-container {
-        height: 100vh;
-        width: 100vw;
     }
     #home {
         padding-left: 5%;
@@ -106,11 +94,5 @@ body {
         padding-top: 5%;
         width: 70%;
         clear: both;
-    }
-    #footer {
-        text-align: center;
-        font-size: 0.6em;
-        padding: 1% 0;
-        color: rgb(150, 150, 150);
     }
 }
